--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /.env
+.env
 error_log
 .DS_Store
 .project
@@ -11,7 +12,7 @@ error_log
 /public/bundles/zsvirsoftsoftgen/
 # TODO access control és hozzáférés tesztelés
 # TODO controller, js fájlok és generált fájlok átadása
-
+.htaccess
 
 ###> symfony/webpack-encore-pack ###
 /node_modules/
