--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,7 @@ parameters:
     locale: 'en'
     base: "%env(base)%"
     version: "%env(VERSION)%"
+    subdir: "%env(subdir)%"
 
 services:
     # default configuration for services in *this* file
